--- a/cms_design_electronics/cms_design_electronics/templates/dcdc/dcdc_page.html
+++ b/cms_design_electronics/cms_design_electronics/templates/dcdc/dcdc_page.html
@@ -126,7 +126,7 @@
 
 {% block extra_js %}
 
-<script type="text/javascript">
+<script>
 
     //Global variable for range of bode plots on the x-axis
     range = JSON.parse("{{ page.X_RANGE.x_range }}");
@@ -138,7 +138,7 @@
 
     mags_input_output_transfer = JSON.parse("{{ page.MAGS_IO.mags_io }}");
     phases_input_output_transfer = JSON.parse("{{ page.PHASE_IO.phase_io }}");
-    
+
     mags_duty_output_transfer = JSON.parse("{{ page.MAGS_DO.mags_do }}");
     phases_duty_output_transfer = JSON.parse("{{ page.PHASE_DO.phase_do }}");
 
@@ -154,144 +154,9 @@
     duty_out_mag_div = "open_plot_Duty to Output Transfer Function_mag";
     duty_out_phs_div = "open_plot_Duty to Output Transfer Function_phase";
 
-(function($) {
-    $.fn.genComponents = function() {
-        this.submit(function(event) {
-            event.preventDefault();
-            var form = $(this);
-
-            //Remove "submission-invalid" class from previously 
-            //invalid submissions.
-            for(let i = 0; i < form[0].length; i++){
-                let input = form[0][i]
-                if (input.id){
-                    $("#".concat(input.id)).removeClass("submission-invalid");
-                }
-            }
-            $.ajax({
-                type: form.attr('method'),
-                url: form.attr('action'),
-                data: form.serialize(),
-                success: function(json){
-                    //Update recommended components with recommended values
-                    //for design.
-                    for (let key in json){
-                        document.getElementById(key).value = json[key];
-                    }
-                    $("#recommendedComponents").addClass("success-indication");
-                    setTimeout(function(){
-                        $("#recommendedComponents").removeClass("success-indication");
-                    }, 1000);
-                },
-                error: function(json){
-                    let jsonErrors = $.parseJSON(json.responseText)
-
-                    for (let key in jsonErrors){
-                        $("#".concat(key)).addClass("submission-invalid");
-                    }
-                }
-            });
-        });
-        return this;
-    }
-})(jQuery)
-
-$(function() {
-    $('#generateRecommendedComponents').genComponents();
-});
-
-(function($) {
-    $.fn.genAnalysis = function() {
-        this.submit(function(event) {
-            event.preventDefault();
-            var form = $(this);
-
-            //Remove "submission-invalid" class from previously 
-            //invalid submissions.
-            for(let i = 0; i < form[0].length; i++){
-                let input = form[0][i]
-                if (input.id){
-                    $("#".concat(input.id)).removeClass("submission-invalid");
-                }
-            }
-            $("#generateOpenLoopTransfers").removeClass("submission-invalid")
-
-            $.ajax({
-                type: form.attr('method'),
-                url: form.attr('action'),
-                data: form.serialize(),
-                success: function(json){
-                    //Update design equations with analysis results.
-                    for (let key in json){
-                        document.getElementById(key).value = json[key];
-                    }
-                    $("#generateOpenLoopTransfers").addClass("success-indication");
-                    setTimeout(function(){
-                        $("#generateOpenLoopTransfers").removeClass("success-indication");
-                    }, 1000);
-                },
-                error: function(json){
-                    let jsonErrors = $.parseJSON(json.responseText)
-
-                    for (let key in jsonErrors){
-                        $("#".concat(key)).addClass("submission-invalid");
-                    }
-                }
-            });
-        });
-        return this;
-    }
-})(jQuery)
-
-$(function() {
-    $('#generateConverterAnalysis').genAnalysis();
-});
-
-(function($) {
-    $.fn.genOpenLoop = function() {
-        this.submit(function(event) {
-            event.preventDefault();
-            var form = $(this);
-
-            $("#generateOpenLoopButton").removeClass("submission-invalid")
-
-            $.ajax({
-                type: form.attr('method'),
-                url: form.attr('action'),
-                data: form.serialize(),
-                success: function(json){
-                    graphs.forEach(function(graph){
-                        for(let div in json){
-                            if (graph.mag_plot_div == div){
-                                graph.mags = json[div][0];
-                                //graph.mags_max = Math.max(json[div][0]);
-                                //graph.mags_min = Math.min(json[div][0]);
-                                graph.phases = json[div][1];
-                                //graph.phases_max = Math.max(json[div][1]);
-                                //graph.phases_min = Math.min(json[div][1]);
-                                graph.redraw();
-                            }
-                        }
-                    });
-                },
-                error: function(json){
-                    let jsonErrors = $.parseJSON(json.responseText)
-
-                    for (let key in jsonErrors){
-                        $("#".concat(key)).addClass("submission-invalid");
-                    }
-                }
-            });
-        });
-        return this;
-    }
-})(jQuery)
-
-$(function() {
-    $('#generateOpenLoopTransfers').genOpenLoop();
-});
-
 </script>
+
+<script type="text/javascript" src="/static/js/dcdc/ajaxSupport.js"></script>
 
 <!--Load open loop bode plot capability.-->
 <script src="https://fastcdn.org/D3.js/3.5.6/d3.min.js"></script>
