--- a/cms_design_electronics/cms_design_electronics/templates/home/welcome_page.html
+++ b/cms_design_electronics/cms_design_electronics/templates/home/welcome_page.html
@@ -23,13 +23,7 @@
 {% endblock %}
 
 {% block extra_css %}
-<style>
-    .variable-header{
-        font-size: 5vmin;
-    }
 
-    .variable-subheader{
-        font-size: 3vmin;
-    }
-</style>
+<link rel="stylesheet" href="static/css/home/header.css">
+
 {% endblock %}
