--- a/cms_design_electronics/cms_design_electronics/templates/design_center/design_center_page.html
+++ b/cms_design_electronics/cms_design_electronics/templates/design_center/design_center_page.html
@@ -32,15 +32,7 @@
 {% endblock content %}
 
 {% block extra_js %}
-<script>
-$(document).ready(function() {
 
-    var docHeight = $(window).height();
-    var footerHeight = $('#footer').height();
-    var footerTop = $('#footer').position().top + footerHeight;
+<script src="/static/js/stuckFooter.js" type="text/javascript"></script>
 
-    if (footerTop < docHeight)
-        $('#footer').css('margin-top', 10+ (docHeight - footerTop) + 'px');
-});
-</script>
 {% endblock extra_js %}
